fixed profile image squish on heroku

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -127,8 +127,8 @@
 
 
 .profile-image-container { /* This class is specific to the index page */
-  width: 150px; /* Smaller size for index list */
-  height: 150px;
+  width: 100px; /* Smaller size for index list */
+  height: 100px;
   overflow: hidden;
   border-radius: 50%;
   border: 2px solid #C6C1B5;
